--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -213,11 +213,30 @@
     width: 8px;
   }  
 
-  .message-body-detail:hover .tooltiparrow {
+  .message-body-detail:hover .tooltipuwu {
     display: block;
     background: black;
     margin-top: -38px;
     margin-left: 0px;
     align-items: center;
     width: none;
+}
+
+.tooltipuwu {
+    padding: 5px;
+    position: absolute;
+    background-color: rgba(0,0,0,0.7);
+    color: white;
+    text-align: center;
+    line-height: 18px;
+    font-size: 15px;
+    font-family: 'Catamaran', sans-serif;
+    font-weight: bold;
+    text-transform: lowercase;
+    border-radius: 5px;
+    margin-left: 31px;
+    margin-top: -23px;
+    z-index: 100;
+    display: none;
+    animation: tooltiparrow-fade 0.15s ease-out 0s 1 forwards;
 }
